Add drill4j - service group setup Add nginx to host build Note: realworld API is passed from .env and set after container launch

--- a/drill4js.config.json
+++ b/drill4js.config.json
@@ -19,7 +19,8 @@
     "ignore": ["dist/**/polyfills.js.map"]
   },
   "output": {
-    "agentId": "angular-demo-agent",
-    "agentApiUrl": "http://localhost:9404"
+    "agentId": "default-agent-id",
+    "groupId": "default-group-id",
+    "agentApiUrl": "jsagent:9404"
   }
 }
