--- a/nginx.conf
+++ b/nginx.conf
@@ -2,8 +2,8 @@ server {
     listen 80;
     server_name _;
 
-    root /var/www/;
-    index /var/www/index.html;
+    root /var/www/dist;
+    index /index.html;
 
     location / {
         try_files $uri /index.html;
