--- a/.env
+++ b/.env
@@ -1,4 +1,8 @@
-BACK_VERSION=0.7.0-8
-TEST2CODE_PLUGIN_VERSION=0.7.0-12
-FRONT_VERSION=0.7.0-18
-JS_AGENT_VERSION=0.1.0-14
+REALWORLD_API_ADDRESS=host.docker.internal:9090
+REALWORLD_BUILD_VERSION=0.1.0
+REALWORLD_PORT=8080
+
+DRILL_JS_AST_PARSER_VERSION=latest
+DRILL_JS_AGENT_HOST=http://host.docker.internal:9404
+DRILL_JS_AGENT_AGENT_ID=angular-realworld-frontend
+DRILL_JS_AGENT_GROUP_ID=test
