build 0.2.0 New - src/app/shared/validators/min-length
Modified
- src/app/auth/auth.component.ts - constructor
- src/app/shared/buttons - toggleFavorite

Deleted
- src/app/core/services/articles.service.ts - unfavorite

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-REALWORLD_API_ADDRESS=host.docker.internal:9090
-REALWORLD_BUILD_VERSION=0.1.0
+REALWORLD_API_ADDRESS=https://conduit.productionready.io/api
+#REALWORLD_BUILD_VERSION=0.1.0
+REALWORLD_BUILD_VERSION=0.2.0
 REALWORLD_PORT=8080
 
 DRILL_JS_AST_PARSER_VERSION=latest
