build 0.3.0 Modified - src/app/article/article.component.ts - addComment Deleted - src/app/article/article.component.ts - deleteComment

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 REALWORLD_API_ADDRESS=https://conduit.productionready.io/api
 #REALWORLD_BUILD_VERSION=0.1.0
-REALWORLD_BUILD_VERSION=0.2.0
+#REALWORLD_BUILD_VERSION=0.2.0
+REALWORLD_BUILD_VERSION=0.3.0
 REALWORLD_PORT=8080
 
 DRILL_JS_AST_PARSER_VERSION=latest
