chore: dockerfiles + docker-compose + env

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,3 +1,7 @@
+upstream realworld-api {
+    server realworld-api:8080;
+}
+
 server {
     listen 80;
     server_name _;
@@ -7,5 +11,21 @@ server {
 
     location / {
         try_files $uri /index.html;
+    }
+
+    location /api/ {
+        proxy_pass http://realworld-api/;
+        # proxy_pass http://conduit.productionready.io/api/;
+        #proxy_ssl_certificate     /etc/nginx/client.pem;
+        #proxy_ssl_certificate_key /etc/nginx/client.key;
+
+        proxy_http_version 1.1;
+        proxy_cache_bypass $http_upgrade;
+        proxy_set_header Host $http_host;
+        proxy_intercept_errors on;
+        proxy_connect_timeout 600;
+        proxy_read_timeout 600;
+        proxy_send_timeout 600;
+        access_log /var/log/nginx/api_access.log;
     }
 }
