chore: dockerfiles + docker-compose + env

--- a/.env
+++ b/.env
@@ -1,7 +1,15 @@
-REALWORLD_API_ADDRESS=https://conduit.productionready.io/api
-#REALWORLD_BUILD_VERSION=0.1.0
-REALWORLD_BUILD_VERSION=0.2.0
-REALWORLD_PORT=8080
+#REALWORLD_API_ADDRESS=https://conduit.productionready.io/api
+REALWORLD_API_ADDRESS=/api
+
+#REALWORLD_FRONTEND_BUILD_VERSION=0.1.0
+REALWORLD_FRONTEND_BUILD_VERSION=0.2.0
+#REALWORLD_FRONTEND_BUILD_VERSION=0.3.0
+REALWORLD_FRONTEND_PORT=8080
+
+#REALWORLD_API_BUILD_VERSION=0.1.0
+REALWORLD_API_BUILD_VERSION=0.2.0
+#REALWORLD_API_BUILD_VERSION=0.3.0
+REALWORLD_API_PORT=8081
 
 DRILL_JS_AST_PARSER_VERSION=latest
 DRILL_JS_AGENT_HOST=http://host.docker.internal:9404
